# KFCode

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  kfcode.jsonc  start-rust-api.sh
crates/kfcode-agent/: Cargo.toml
crates/kfcode-agent/src/: agent.rs  executor.rs  lib.rs  message.rs
crates/kfcode-cli/: Cargo.toml
crates/kfcode-cli/src/: main.rs  upgrade.rs
crates/kfcode-command/: Cargo.toml
crates/kfcode-command/commands/: commit.md  init.md  review.md  test.md
crates/kfcode-command/src/: lib.rs
crates/kfcode-command/tests/: builtin.rs  load_parse.rs
crates/kfcode-command/tests/common/: mod.rs
crates/kfcode-config/: Cargo.toml
crates/kfcode-config/src/: lib.rs  loader.rs  schema.rs  wellknown.rs
crates/kfcode-config/tests/: config_loaded.rs
crates/kfcode-grep/: Cargo.toml
crates/kfcode-grep/src/: lib.rs  search.rs
crates/kfcode-lsp/: Cargo.toml
crates/kfcode-lsp/src/: lib.rs
crates/kfcode-lsp/tests/: lsp_errors_always_error.rs  lsp_errors_missing_binary.rs  lsp_features.rs  lsp_golden.rs  smoke.rs
crates/kfcode-lsp/tests/common/: mod.rs
crates/kfcode-lsp/tests/fixtures/: stub.rs
crates/kfcode-mcp/: Cargo.toml
crates/kfcode-mcp/src/: auth.rs  client.rs  lib.rs  oauth.rs  protocol.rs  tool.rs  transport.rs
crates/kfcode-mcp/tests/: auth_store.rs  mcp_http_errors.rs  mcp_http_golden.rs  mcp_oauth.rs  mcp_sse.rs  smoke.rs
crates/kfcode-mcp/tests/common/: mod.rs  sse_server.rs
crates/kfcode-permission/: Cargo.toml
crates/kfcode-permission/src/: arity.rs  engine.rs  lib.rs  ruleset.rs
crates/kfcode-permission/tests/: engine.rs  ruleset.rs  smoke.rs
crates/kfcode-permission/tests/common/: mod.rs
crates/kfcode-plugin/: Cargo.toml
crates/kfcode-plugin/builtin/: codex-auth.ts  copilot-auth.ts
crates/kfcode-plugin/host/: plugin-host.ts
crates/kfcode-plugin/src/: lib.rs
crates/kfcode-plugin/src/subprocess/: auth.rs  client.rs  loader.rs  mod.rs  protocol.rs  runtime.rs
crates/kfcode-plugin/tests/fixtures/: echo-plugin.ts
crates/kfcode-provider/: Cargo.toml
crates/kfcode-provider/src/: anthropic.rs  auth.rs  azure.rs  bedrock.rs  bootstrap.rs  cerebras.rs  cohere.rs  convert.rs  custom_fetch.rs  deepinfra.rs  deepseek.rs  github_copilot.rs  gitlab.rs  google.rs  groq.rs  lib.rs  message.rs  mistral.rs  models.rs  openai.rs  openrouter.rs  perplexity.rs  provider.rs  responses.rs  responses_convert.rs  retry.rs  stream.rs  together.rs  tools.rs  transform.rs  vercel.rs  vertex.rs  xai.rs
crates/kfcode-provider/tests/: provider_integration.rs
crates/kfcode-server/: Cargo.toml
crates/kfcode-server/src/: auth_middleware.rs  error.rs  lib.rs  mcp_oauth.rs  oauth.rs  pty.rs  routes.rs  server.rs  worktree.rs
crates/kfcode-server/static/: index.html
crates/kfcode-server/tests/: api_errors.rs  auth_middleware.rs  config.rs  config_patch.rs  health.rs  provider_file.rs  pty_websocket.rs  server_database_injection.rs  sessions.rs  smoke.rs
crates/kfcode-server/tests/common/: mod.rs
crates/kfcode-session/: Cargo.toml
crates/kfcode-session/src/: compaction.rs  instruction.rs  lib.rs  llm.rs  message.rs  message_v2.rs  prompt.rs  retry.rs  revert.rs  session.rs  snapshot.rs  status.rs  summary.rs  system.rs  todo.rs
crates/kfcode-session/src/prompt_templates/: anthropic.txt  beast.txt  codex_header.txt  gemini.txt  qwen.txt  trinity.txt
crates/kfcode-session/tests/: session_integration.rs
crates/kfcode-storage/: Cargo.toml
crates/kfcode-storage/src/: database.rs  lib.rs  repository.rs  schema.rs
crates/kfcode-storage/tests/: behavior.rs  messages.rs  open_at.rs  parts_share.rs  permissions_schema.rs  pragma.rs  sessions.rs  smoke.rs  todos.rs
crates/kfcode-storage/tests/common/: mod.rs
crates/kfcode-tool/: Cargo.toml
crates/kfcode-tool/src/: apply_patch.rs  bash.rs  batch.rs  codesearch.rs  external_directory.rs  glob_tool.rs  grep_tool.rs  invalid.rs  lib.rs  ls.rs  lsp_tool.rs  multiedit.rs  plan.rs  question.rs  read.rs  registry.rs  skill.rs  task.rs  todo.rs  tool.rs  truncation.rs  webfetch.rs  websearch.rs  write.rs
crates/kfcode-tool/src/edit/: mod.rs  replacers.rs  tool.rs
crates/kfcode-tool/tests/: builtin_read_write.rs  permission_callback.rs  registry.rs  smoke.rs
crates/kfcode-tool/tests/common/: mod.rs
crates/kfcode-tui/: Cargo.toml  build.rs
crates/kfcode-tui/src/: api.rs  branding.rs  command.rs  event.rs  file_index.rs  lib.rs  router.rs  terminal.rs
crates/kfcode-tui/src/app/: app.rs  mod.rs  state.rs  terminal.rs
crates/kfcode-tui/src/components/: dialog.rs  diff.rs  home.rs  logo.rs  message.rs  message_palette.rs  mod.rs  permission.rs  prompt.rs  question.rs  revert_card.rs  semantic_highlight.rs  session.rs  session_message.rs  session_text.rs  session_tool.rs  sidebar.rs  slash_command.rs  spinner.rs  thinking.rs  toast.rs  todo_item.rs  tool_call.rs  tool_views.rs
crates/kfcode-tui/src/components/dialogs/: agent_select.rs  alert.rs  command_palette.rs  confirm.rs  fork.rs  help.rs  mcp.rs  mod.rs  model_select.rs  prompt_stash.rs  provider.rs  session_export.rs  session_list.rs  session_rename.rs  skill_list.rs  status.rs  subagent.rs  tag.rs  theme_list.rs  timeline.rs
crates/kfcode-tui/src/components/markdown/: code_block.rs  mod.rs  parser.rs  renderer.rs  syntax.rs
crates/kfcode-tui/src/context/: app_context.rs  keybind.rs  mod.rs  session_context.rs
crates/kfcode-tui/src/hooks/: mod.rs  use_effect.rs  use_state.rs
crates/kfcode-tui/src/theme/: mod.rs
crates/kfcode-tui/src/theme/presets/: aura.json  ayu.json  carbonfox.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cobalt2.json  cursor.json  github.json  (+24 more)
crates/kfcode-tui/src/ui/: border.rs  clipboard.rs  layout.rs  mod.rs  selection.rs  text.rs
crates/kfcode-util/: Cargo.toml
crates/kfcode-util/src/: filesystem.rs  lib.rs  logging.rs  upgrade_check.rs  util.rs
crates/kfcode-watcher/: Cargo.toml
crates/kfcode-watcher/src/: lib.rs
crates/kfcode-watcher/tests/: multi_path_errors.rs  single_path.rs  smoke.rs
crates/kfcode-watcher/tests/common/: mod.rs
(+87 files in other folders)
