[package]
name = "kfcode-command"
version = "0.1.0"
edition = "2021"

[dependencies]
kfcode-plugin = { path = "../kfcode-plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
regex = "1.10"
tracing = "0.1"
glob = "0.3"
