[package]
name = "kfcode-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kfcode-core = { path = "../kfcode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
oauth2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
