[package]
name = "kfcode-permission"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kfcode-core = { path = "../kfcode-core" }
kfcode-plugin = { path = "../kfcode-plugin" }
glob = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
