[package]
name = "kfcode-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
which = "7"
dirs = "6"
