[package]
name = "kfcode-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kfcode-core = { path = "../kfcode-core" }
kfcode-types = { path = "../kfcode-types" }
kfcode-storage = { path = "../kfcode-storage" }
kfcode-provider = { path = "../kfcode-provider" }
kfcode-tool = { path = "../kfcode-tool" }
kfcode-mcp = { path = "../kfcode-mcp" }
kfcode-lsp = { path = "../kfcode-lsp" }
kfcode-plugin = { path = "../kfcode-plugin" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
