[package]
name = "kfcode-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
lsp = ["kfcode-lsp", "lsp-types"]

[dependencies]
kfcode-core = { path = "../kfcode-core" }
kfcode-config = { path = "../kfcode-config" }
kfcode-util = { path = "../kfcode-util" }
kfcode-grep = { path = "../kfcode-grep" }
kfcode-plugin = { path = "../kfcode-plugin" }
kfcode-permission = { path = "../kfcode-permission" }
kfcode-lsp = { path = "../kfcode-lsp", optional = true }
lsp-types = { version = "0.97", optional = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
async-process = { workspace = true }
which = { workspace = true }
content_inspector = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
urlencoding = "2.1"
html2md = "0.2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
