[package]
name = "kfcode-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kfcode-core = { path = "../kfcode-core" }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
# Enables the GitHub release lookup + cache in `upgrade_check`.
# Off by default so util's other dependents don't pull in reqwest/TLS.
upgrade-check = ["dep:reqwest"]
