[package]
name = "kfcode-watcher"
version = "0.1.0"
edition = "2021"
description = "File system watcher for kfcode"

[dependencies]
notify = { version = "7.0", features = ["serde"] }
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
dashmap = "6.1"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tokio-test = "0.4"
